k8s/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pgmicroservice
  labels:
    app: pgmicroservice
spec:
  replicas: 2
  selector:
    matchLabels:
      app: pgmicroservice
  template:
    metadata:
      labels:
        app: pgmicroservice
    spec:
      containers:
        - name: pgmicroservice
          image: dhanif768/pgmicroservice:latest
          ports:
            - containerPort: 3000
          readinessProbe:
            httpGet:
              path: /health
              port: 3000
            initialDelaySeconds: 5
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /health
              port: 3000
            initialDelaySeconds: 30
            periodSeconds: 20
